Fix the links text position on Firefox

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -45,6 +45,7 @@ $default-box-shadow-color: #b5b5b5;
           text-decoration: none;
           display: inline-block;
           overflow: hidden;
+          vertical-align: top;
           perspective: 400px;
           perspective-origin: 50% 50%;
 
